--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <title>Frontend Mentor | Recipe page</title>
 </head>
 
-<body class="bg-neutral-eggshell">
+<body class="bg-neutral-eggshell text-neutral-wenge-brown leading-6">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
